removed title letter spacing

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -26,11 +26,10 @@
 
     h1 {
         font-family: "Exo 2", sans-serif;
-        font-size: 2em;
+        font-size: 2rem;
         text-transform: uppercase;
         border-left: 5px solid #1C3041;
         border-bottom: #1C3041 2px solid;
-        letter-spacing: 0.3em;
         margin-bottom: 30px;
         padding-left: 10px;
     }
