--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -1,6 +1,19 @@
 .styled-from-outside {
     display: contents;
 
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    blockquote {
+        border-left: 5px solid #344966;
+        color: #666;
+        font-style: italic;
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+    }
+
     pre {
         background: #f4f4f4;
         border: 1px solid #ddd;
@@ -35,6 +48,7 @@
     }
     p {
         margin-left: 20px;
+        text-indent: 20px;
     }
 }
 
