--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -3,6 +3,7 @@
 
     img {
         max-width: 100%;
+        margin-left: -20px;
         height: auto;
     }
 
@@ -12,6 +13,7 @@
         font-style: italic;
         margin: 1.5em 10px;
         padding: 0.5em 10px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     }
 
     pre {
@@ -47,7 +49,6 @@
         padding-left: 10px;
     }
     p {
-        margin-left: 20px;
         text-indent: 20px;
     }
 }
