--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -54,3 +54,15 @@
     }
 }
 
+.project {
+    a {
+        color: #587ea0;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 1.1rem;
+        &:hover {
+            color: #9bb4d7;
+        }
+    }
+}
+
