--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -9,7 +9,9 @@
 
     blockquote {
         border-left: 5px solid #344966;
-        color: #666;
+        background: rgba(255, 255, 255, 0.2);
+        color: #000;
+        border-radius: 0 5px 5px 0;
         font-style: italic;
         margin: 1.5em 10px;
         padding: 0.5em 10px;
@@ -21,7 +23,7 @@
         border: 1px solid #ddd;
         border-radius: 5px;
         border-left: 5px solid #344966;
-        color: #666;
+        color: #fff;
         page-break-inside: avoid;
         font-family: monospace;
         font-size: 15px;
