--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -7,6 +7,16 @@
         height: auto;
     }
 
+    a {
+        color: #8e179b;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 1.1rem;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
     blockquote {
         border-left: 5px solid #344966;
         background: rgba(255, 255, 255, 0.2);
