--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -9,10 +9,8 @@
 
     a {
         color: #8e179b;
-        white-space: pre-wrap;
         word-wrap: break-word;
-        word-break: break-all;
-        display:block;
+       // display:block;
         text-decoration: none;
         font-weight: bold;
         font-size: 1.1rem;
