--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -3,8 +3,11 @@
 
     img {
         max-width: 100%;
-        margin-left: -20px;
+        margin-left:calc(50% - 20px) ;
+        transform: translateX(-50%);
         height: auto;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
     }
 
     a {
